--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "deprecated-react-native-prop-types": "^4.2.0",
     "expo": "~48.0.18",
+    "expo-image": "~1.0.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
+    "native-notify": "^3.0.6",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-bottom-scroll-listener": "^5.1.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-lazyload": "^1.1.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
