--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Peptech Time",
     "slug": "peptech",
-    "version": "1.1.0",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -20,11 +20,12 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": ["INTERNET"]
       },
       "package": "com.peptechtime.com",
       "googleServicesFile":"./google-services.json",
-      "versionCode":2
+      "versionCode":1
     },
     "web": {
       "favicon": "./assets/favicon.png"
