--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "deprecated-react-native-prop-types": "^4.2.0",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
     "expo-image": "~1.0.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
@@ -28,6 +31,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-video": "^5.2.1",
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
