--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
