--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.5.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -28,14 +29,14 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-lazyload": "^1.1.0",
     "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "11.26.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
