--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "deprecated-react-native-prop-types": "^4.2.0",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
+    "expo-device": "~5.2.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "native-notify": "^3.0.6",
