--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "peptech",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,15 +13,20 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "deprecated-react-native-prop-types": "^4.2.0",
+    "@types/react": "~18.0.27",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
+    "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-modules-autolinking": "^1.5.1",
     "expo-notifications": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.4.0",
     "moment": "^2.29.4",
     "native-notify": "^3.0.6",
     "react": "18.2.0",
@@ -30,6 +34,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-lazyload": "^1.1.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-render-html": "^6.3.4",
@@ -38,7 +43,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
